Change the default deployment reposotory

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,13 +16,10 @@ concurrency:
 
 jobs:
   workflows:
-    strategy:
-      matrix:
-        target: [ha-addons-edge, grott-home-assistant-add-on]
     uses: hassio-addons/workflows/.github/workflows/addon-deploy.yaml@main
     with:
-      repository: "ha-addons"
-      repository_edge: ${{ matrix.target }}
+      repository: "grott-home-assistant-add-on"
+      repository_edge: "ha-addons-edge"
     secrets:
       DISPATCH_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
     permissions:
