Add beta repository

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,8 @@ jobs:
   workflows:
     uses: hassio-addons/workflows/.github/workflows/addon-deploy.yaml@main
     with:
-      repository: "grott-home-assistant-add-on"
+      repository: "ha-addons"
+      repository_beta: "ha-addons-beta"
       repository_edge: "ha-addons-edge"
     secrets:
       DISPATCH_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
