--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,17 +89,13 @@ jobs:
             BUILD_REPOSITORY=${{ github.repository }}
             BUILD_VERSION=dev
       # install goss and dgoss
-      - name: Install goss
+      - name: Install  pytest-testinfra
         run: |
-          VERSION=v0.4.4
-          curl -L "https://github.com/goss-org/goss/releases/download/${VERSION}/goss-linux-amd64" -o /usr/local/bin/goss
-          chmod +rx /usr/local/bin/goss
-
-          VERSION=v0.4.4
-          curl -L "https://github.com/goss-org/goss/releases/download/${VERSION}/dgoss" -o /usr/local/bin/dgoss
-          chmod +rx /usr/local/bin/dgoss
+          pip install uv
+          uv virtualenv
+          uv pip install -r requirements.txt
       # run goss tests
-      - name: Run goss tests
+      - name: Run testinfra
         run: |
-          # docket pull ${{ github.repository_owner }}/${{ steps.information.outputs.slug }}/amd64:${{ steps.release.outputs.version }}
-          dgoss run "${{ github.repository_owner }}/${{ steps.information.outputs.slug }}/amd64:${{ steps.release.outputs.version }}"
+          . .venv/bin/activate
+          pytest --image "${{ github.repository_owner }}/${{ steps.information.outputs.slug }}/amd64:${{ steps.release.outputs.version }}"
