Update renovete to use the correct regex matching

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -28,7 +28,7 @@
     },
     {
       "customType": "regex",
-      "fileMatch": ["^/Dockerfile$"],
+      "fileMatch": ["/Dockerfile$"],
       "matchStrings": ["ENV GIT_REF=(?<currentDigest>.*?)\\n"],
       "currentValueTemplate": "Master",
       "depNameTemplate": "grott",
